iptables
# Generated by iptables-save v1.4.7 on Mon Jan 26 12:23:06 2015
*filter
:INPUT ACCEPT [6465:719405]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [4975:945189]
:fail2ban-BadBots - [0:0]
:fail2ban-FTP - [0:0]
:fail2ban-PBX-GUI - [0:0]
:fail2ban-SIP - [0:0]
:fail2ban-SSH - [0:0]
:fail2ban-apache-auth - [0:0]
:fail2ban-recidive - [0:0]
-A INPUT -p tcp -m tcp --dport 21 -j fail2ban-FTP 
-A INPUT -p tcp -j fail2ban-apache-auth 
-A INPUT -j fail2ban-PBX-GUI 
-A INPUT -j fail2ban-SIP 
-A INPUT -p tcp -m multiport --dports 80,443 -j fail2ban-BadBots 
-A INPUT -p tcp -m tcp --dport 22 -j fail2ban-SSH 
-A INPUT -j fail2ban-recidive 
# ban known bad SIP User-Agents
-A INPUT -i eth+ -p udp -m udp --dport 5060 -m string --string "friendly-scanner" --algo bm --to 1500 -j DROP 
-A INPUT -i eth+ -p udp -m udp --dport 5060 -m string --string "sipvicious" --algo bm --to 1500 -j DROP 
-A INPUT -i eth+ -p udp -m udp --dport 5060 -m string --string "sundayddr" --algo bm --to 1500 -j DROP 
-A INPUT -i eth+ -p udp -m udp --dport 5060 -m string --string "sipsak" --algo bm --to 1500 -j DROP 
-A INPUT -i eth+ -p udp -m udp --dport 5060 -m string --string "iWar" --algo bm --to 1500 -j DROP 
-A INPUT -i eth+ -p udp -m udp --dport 5060 -m string --string "sipcli" --algo bm --to 1500 -j DROP 
-A INPUT -i eth+ -p udp -m udp --dport 5060 -m string --string "VaxSIPUserAgent" --algo bm --to 1500 -j DROP 
-A INPUT -i eth+ -p udp -m udp --dport 5060 -m string --string "SIPScan" --algo bm --to 1500 -j DROP 
-A INPUT -i eth+ -p udp -m udp --dport 5060 -m string --string "smap" --algo bm --to 1500 -j DROP 
-A INPUT -i eth+ -p udp -m udp --dport 5060 -m string --string "A_B_C" --algo bm --to 1500 -j DROP 
-A INPUT -i eth+ -p udp -m udp --dport 5060 -m string --string "aaaaaaaa" --algo bm --to 1500 -j DROP 
-A INPUT -i eth+ -p udp -m udp --dport 5060 -m string --string "sivus" --algo bm --to 1500 -j DROP 
-A INPUT -i eth+ -p udp -m udp --dport 5060 -m string --string "Test Agent" --algo bm --to 1500 -j DROP 
-A INPUT -i eth+ -p udp -m udp --dport 5060 -m string --string "eyeBeam release 3006o stamp 17551" --algo bm --to 1500 -j DROP 
-A INPUT -i eth+ -p udp -m udp --dport 5060 -m string --string "eyeBeam release 3007n stamp 17816" --algo bm --to 1500 -j DROP 
# Block top 100 IPs (rolling) that sent too many REGISTER, INVITE, 200 OK response, or ACK messages in a 60 second period
# Adjust either the time or the hit count to your environment, but hit count cannot be > 20 without adjustment
# to /etc/modprobe.d/xt_recent.conf. Technically these should never be hit if you are running fail2ban 
-A INPUT -p udp -m udp --dport 5060 -m string --string "OPTIONS sip:" --algo bm -m recent --set --name OPTIONS 
-A INPUT -p udp -m udp --dport 5060 -m string --string "OPTIONS sip:" --algo bm -m recent --update --seconds 60 --hitcount 10 --rttl --name OPTIONS -j DROP 
-A INPUT -p udp -m udp --dport 5060 -m string --string "REGISTER sip:" --algo bm -m recent --set --name REGISTERS 
-A INPUT -p udp -m udp --dport 5060 -m string --string "REGISTER sip:" --algo bm -m recent --update --seconds 60 --hitcount 10 --rttl --name REGISTERS -j DROP 
-A INPUT -p udp -m udp --dport 5060 -m string --string "INVITE sip:" --algo bm -m recent --set --name INVITES 
-A INPUT -p udp -m udp --dport 5060 -m string --string "INVITE sip:" --algo bm -m recent --update --seconds 60 --hitcount 10 --rttl --name INVITES -j DROP
-A INPUT -p udp -m udp --dport 5060 -m string --string "SIP/2.0 200 OK" --algo bm -m recent --set --name OKS 
-A INPUT -p udp -m udp --dport 5060 -m string --string "SIP/2.0 200 OK" --algo bm -m recent --update --seconds 60 --hitcount 10 --rttl --name OKS -j DROP
-A INPUT -p udp -m udp --dport 5060 -m string --string "ACK sip:" --algo bm -m recent --set --name ACKS 
-A INPUT -p udp -m udp --dport 5060 -m string --string "ACK sip:" --algo bm -m recent --update --seconds 60 --hitcount 10 --rttl --name ACKS -j DROP
# Limit traffic from source IP to SIP port to 8 requests per second. Should catch malformed floods that bypass fail2ban
-A INPUT -p udp -m hashlimit --hashlimit 8/sec --hashlimit-mode srcip,dstport --hashlimit-name sip_clients -m udp --dport 5060 -j ACCEPT 
-A INPUT -p udp -m udp --dport 5060 -j DROP
-A fail2ban-BadBots -j RETURN 
-A fail2ban-FTP -j RETURN 
-A fail2ban-PBX-GUI -j RETURN 
-A fail2ban-SIP -j RETURN 
-A fail2ban-SSH -j RETURN 
-A fail2ban-apache-auth -j RETURN 
-A fail2ban-recidive -j RETURN 
COMMIT
# Completed on Mon Jan 26 12:23:06 2015
